force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{0000}</displayFormat>
        <label>Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>