force-app/main/default/objects/Equipment__c/fields/Days_Since_Lent__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Lent__c</fullName>
    <formula>IF(ISBLANK(Lent_Date__c), NULL, TODAY() - Lent_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Lent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>