force-app/main/default/objects/Equipment__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Purchase_Price__c)), NOT(ISBLANK(Current_Value__c))), Purchase_Price__c - Current_Value__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>