force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer/Laptop</fullName>
            </value>
            <value>
                <fullName>Monitor/Display</fullName>
            </value>
            <value>
                <fullName>Mobile Device</fullName>
            </value>
            <value>
                <fullName>Networking Equipment</fullName>
            </value>
            <value>
                <fullName>Printer/Scanner</fullName>
            </value>
            <value>
                <fullName>Audio/Video Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>