force-app/main/default/objects/Equipment__c/fields/Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_Date__c</fullName>
    <label>Expected Return Date</label>
    <type>Date</type>
</CustomField>