force-app/main/default/objects/Equipment__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;Lent&quot;), NOT(ISBLANK(Expected_Return_Date__c)), Expected_Return_Date__c &lt; TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>