force-app/main/default/objects/Equipment__c/fields/Lent_Date__c.field-meta.xml
<CustomField>
    <fullName>Lent_Date__c</fullName>
    <label>Lent Date</label>
    <type>Date</type>
</CustomField>