force-app/main/default/objects/Equipment__c/validationRules/Account_Required_When_Lent.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required_When_Lent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Lent&quot;), ISBLANK(Account__c))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is required when Status is &apos;Lent&apos;</errorMessage>
</ValidationRule>