force-app/main/default/objects/Equipment__c/validationRules/Actual_Return_After_Lent_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Return_After_Lent_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Lent_Date__c)), NOT(ISBLANK(Actual_Return_Date__c)), Actual_Return_Date__c &lt; Lent_Date__c)</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Actual Return Date cannot be before Lent Date</errorMessage>
</ValidationRule>