force-app/main/default/objects/Equipment__c/validationRules/Current_Value_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Value_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Current_Value__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Current_Value__c</errorDisplayField>
    <errorMessage>Current Value cannot be negative</errorMessage>
</ValidationRule>