force-app/main/default/objects/Equipment__c/validationRules/Expected_Return_After_Lent_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Return_After_Lent_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Lent_Date__c)), NOT(ISBLANK(Expected_Return_Date__c)), Expected_Return_Date__c &lt; Lent_Date__c)</errorConditionFormula>
    <errorDisplayField>Expected_Return_Date__c</errorDisplayField>
    <errorMessage>Expected Return Date must be on or after Lent Date</errorMessage>
</ValidationRule>