force-app/main/default/objects/Equipment__c/listViews/All_Equipment.listView-meta.xml
<ListView>
    <fullName>All_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Lent_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Equipment</label>
</ListView>