force-app/main/default/objects/Equipment__c/listViews/Available_Equipment.listView-meta.xml
<ListView>
    <fullName>Available_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Condition__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </filters>
    <label>Available Equipment</label>
</ListView>