force-app/main/default/objects/Equipment__c/listViews/Equipment_in_Maintenance.listView-meta.xml
<ListView>
    <fullName>Equipment_in_Maintenance</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Condition__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Maintenance</value>
    </filters>
    <label>Equipment in Maintenance</label>
</ListView>