force-app/main/default/objects/Equipment__c/listViews/Overdue_Returns.listView-meta.xml
<ListView>
    <fullName>Overdue_Returns</fullName>
    <columns>NAME</columns>
    <columns>Equipment_Name__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Lent_Date__c</columns>
    <columns>Expected_Return_Date__c</columns>
    <columns>Days_Since_Lent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Lent</value>
    </filters>
    <filters>
        <field>Expected_Return_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue Returns</label>
</ListView>